--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,3 +6,9 @@ steps:
       key: ${{ secrets.SSH_PRIVATE_KEY }} 
       known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
       
+steps:
+  # ...
+  - name: Adding Known Hosts
+    run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+  - name: Deploy with rsync
+    run: rsync -avz ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/ubuntu/dist/
