--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
        
-  archive-build-artifacts:
+  build-artifacts:
     runs-on: ubuntu-latest
     steps:
 
@@ -25,9 +25,14 @@ jobs:
       - name: Step 3 - Use the Upload Artifact GitHub Action
         uses: actions/upload-artifact@v2
         with: 
-          name: assets-for-download
+          name: artifact
           path: downloads
-          
+jobs:
+       
+  login:
+    needs: build-artifacts
+    runs-on: ubuntu-latest
+    steps:
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
         with:
@@ -35,7 +40,17 @@ jobs:
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+jobs:
+
+  deploy:
+    needs: login
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: artifact
+          path: downloads
       - name: Deploy with rsync
-        run: rsync -avz downloads/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/ubuntu/  
+        run: rsync -avz artifact ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/ubuntu/  
           
       
